[package]
name = "midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "cargo"] }
midir = "0.9.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
